[package]
name = "deques"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "midi_tester"
path = "src/midi_tester.rs"



[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13.0"
midly = "0.5.2"
wasm-bindgen = "0.2"
