[package]
name = "lab02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "debug_exercise_1"
path = "src/debug_exercise_1.rs"

[[bin]]
name = "debug_exercise_2"
path = "src/debug_exercise_2.rs"

[dependencies]
rand = "0.8.5"
